# horseland-productor

./: .gitignore  Australian_Horse_Guide_Association_Rules_2025.xlsx  cnotes.txt  gen_runner.py  horseland_products.xlsx  horseland_products_described.xlsx  page.html  product_generator.py  pyproject.toml  requirements.txt  server.py
static/: index.html
